--- a/test/fixtures/tests.yml
+++ b/test/fixtures/tests.yml
@@ -1,13 +1,13 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  User_id: 
+  user_id:
   title: MyString
   description: MyString
   length: 1
 
 two:
-  User_id: 
+  user_id:
   title: MyString
   description: MyString
   length: 1
